--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -181,22 +181,22 @@ Collective Mark:  A collective mark is mark used by members of a collective orga
 Collective Membership Mark:  A collective membership mark is a mark used by the members of a particular organization to signify that they are members of that organization (e.g., a social club or labor union:  See TMEP Section 1304)."></a></p>
                                <fieldset>
                                     <legend>Select the type of mark you are applying for</legend>
-                                    <div>
-                                         <input class="form-check-input checkmark" type="checkbox" value="Trademark / Servicemark" role="checkbox" aria-checked="false" tabindex="0" aria-labelledby="tradeserv2" id="tradeserv">
+                                    <div class="form-group form-group-md">
+                                         <input class="form-check-input checkmark" type="checkbox" value="Trademark / Servicemark" role="checkbox" tabindex="0" aria-labelledby="tradeserv2" id="tradeserv">
                                          <label class="form-check-label form-check" for="tradeserv" id="tradeserv2"><span class="radio notspecial">Trademark / Servicemark</span></label>
                                     </div>
                                     <div role="heading" aria-level="3">
                                         <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#markoptions" aria-controls="markoptions" aria-expanded="false" id="optionsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span  class="toggleglyph glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Expand for Uncommon Mark Types</button>
                                     </div>
                                     <div id="markoptions" class="collapse Accordion-panel" role="region" aria-labelledby="optionsbtn">
-                                        <div class="Accordion">
+                                        <div class="Accordion form-group form-group-md">
                                         	<p><span class="weight600">&#42;</span> Which of the following types best describes the mark you want to apply for?</p>
-                                            <input class="form-check-input checkmark" type="checkbox" value="Certification" aria-checked="false" tabindex="0" aria-labelledby="cert" id="certcheck">
-                                            <label class="form-check-label form-check" for="certcheck" id="cert"><span class="radio notspecial">Certification</span></label>
-                                            <input class="form-check-input checkmark" type="checkbox" value="Collective" aria-checked="false" tabindex="0" id="collectcheck" aria-labelledby="collect">
-                                            <label class="form-check-label form-check" for="collectcheck" id="collect2"><span class="radio notspecial" id="collect">Collective</span></label>
-                                            <input class="form-check-input checkmark" type="checkbox" value="Collective Membership" aria-checked="false" tabindex="0" aria-labelledby="collectm" id="collectmember">
-                                            <label class="form-check-label form-check" for="collectmember" id="collectmemb"><span class="radio notspecial" id="collectm">Collective Membership</span></label>
+                                            <input class="form-check-input checkmark" type="checkbox" value="Certification" tabindex="0" aria-labelledby="certcheck" id="certcheck">
+                                            <label class="form-check-label form-check" for="certcheck"><span class="radio notspecial" id="certcheck">Certification</span></label>
+                                            <input class="form-check-input checkmark" type="checkbox" value="Collective" tabindex="0" id="collectcheck" aria-labelledby="collect">
+                                            <label class="form-check-label form-check" for="collectcheck"><span class="radio notspecial" id="collect">Collective</span></label>
+                                            <input class="form-check-input checkmark" type="checkbox" value="Collective Membership" tabindex="0" aria-labelledby="collectm" id="collectmember">
+                                            <label class="form-check-label form-check" for="collectmember"><span class="radio notspecial" id="collectm">Collective Membership</span></label>
                                         </div>
                                     </div>
                                 </fieldset>
