--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -189,9 +189,9 @@
                                     </div>
                                 </div>
                                 <p id="usforeign">Is the owner a U.S. or Foreign Entity?</p>
-                                <div role="radiogroup" aria-labelledby="usforeign">
-                                  <label for="inlineRadio019" class="radio-inline radiocontainer" id="usentityselected">US Entity<input type="radio" name="usforeignradio" id="inlineRadio019" value="usentity" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
-                                  <label for="inlineRadio020" class="radio-inline radiocontainer" id="foreignentityselected">Foreign Entity<input type="radio" name="usforeignradio" id="inlineRadio020" value="foreignentity" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                <div role="radiogroup" aria-labelledby="usforeign" class="form-group form-group-md">
+                                  <label for="inlineRadio019" class="radio-inline radiocontainer" id="usentityselected">US Entity<input type="radio" name="usforeignradio" id="inlineRadio019" value="usentity" tabindex="0"><span class="checkmark"></span></label>
+                                  <label for="inlineRadio020" class="radio-inline radiocontainer" id="foreignentityselected">Foreign Entity<input type="radio" name="usforeignradio" id="inlineRadio020" value="foreignentity" tabindex="0"><span class="checkmark"></span></label>
                                 </div><!--END radiogroup-->
                                 <script type="application/javascript" src="js/accordion.js"></script>
                                 <script type="application/javascript" src="js/checkbox.js"></script>
