--- a/GS_inuse_yes.html
+++ b/GS_inuse_yes.html
@@ -175,21 +175,21 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <p class="weight600" id="inuse">Is the mark currently in use? <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="In use means you are already using your trademark in commerce. Commerce means the buying and selling of goods and services"></a></p>
-                                        <div role="radiogroup" aria-labelledby="inuse">
+                                        <div role="radiogroup" aria-labelledby="inuse" class="form-group form-group-md">
                                             <div class="radio">
-                                              <label for="inlineRadio21" class="radio-inline radiocontainer">Yes, the mark is in use with all of the selected goods/services<input type="radio" name="markinuse" id="inlineRadio21" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                              <label for="inlineRadio21" class="radio-inline radiocontainer">Yes, the mark is in use with all of the selected goods/services<input type="radio" name="markinuse" id="inlineRadio21" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                             </div>
                                             <div class="radio">
-                                              <label for="inlineRadio022" class="radio-inline radiocontainer">No, the mark is not in use with all of the selected goods/services<input type="radio" name="markinuse" id="inlineRadio022" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                              <label for="inlineRadio022" class="radio-inline radiocontainer">No, the mark is not in use with all of the selected goods/services<input type="radio" name="markinuse" id="inlineRadio022" value="no" tabindex="0"><span class="checkmark"></span></label>
                                             </div>
                                         </div><!--END radiogroup-->
                                         <p class="weight600" id="foreigninuse">Do you have a registration and/or pending application in a foreign country for same goods/services?</p>
                                         <div role="radiogroup" aria-labelledby="foreigninuse">
-                                            <div class="radio">
-                                              <label for="inlineRadio23" class="radio-inline radiocontainer">Yes<input type="radio" name="foreigninuse" id="inlineRadio23" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                            <div class="radio" class="form-group form-group-md">
+                                              <label for="inlineRadio23" class="radio-inline radiocontainer">Yes<input type="radio" name="foreigninuse" id="inlineRadio23" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                             </div>
                                             <div class="radio">
-                                              <label for="inlineRadio024" class="radio-inline radiocontainer">No<input type="radio" name="foreigninuse" id="inlineRadio024" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                              <label for="inlineRadio024" class="radio-inline radiocontainer">No<input type="radio" name="foreigninuse" id="inlineRadio024" value="no" tabindex="0"><span class="checkmark"></span></label>
                                             </div>
                                         </div><!--END radiogroup-->
                                     </div>
