--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -188,13 +188,14 @@
                                                             <p>A disclaimer is a statement indicating you do not claim exclusive rights to an unregistrable portion of your mark. This is often material that is descriptive or common in your field of business. A disclaimer does not physically remove the unregistrable portion from your mark or affect the appearance of your mark. You cannot disclaim the entire mark. A disclaimer will appear on the registration certificate.</p>
                                                         </div>
                                                     </div>
-                                                    <div class="margincontent">
-                                                        <p id="disclaim">Is there a portion of your mark that you wish to disclaim?</p>                                                        <div role="radiogroup" aria-labelledby="disclaim">
-                                                          <label for="inlineRadio09" class="radio-inline radiocontainer">Yes<input type="radio" name="disclaimradio" id="inlineRadio09" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
-                                                          <label for="inlineRadio010" class="radio-inline radiocontainer">No<input type="radio" name="disclaimradio" id="inlineRadio010" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                                    <div>
+                                                        <p id="disclaim">Is there a portion of your mark that you wish to disclaim?</p>                                                        
+                                                        <div role="radiogroup" aria-labelledby="disclaim" class="form-group form-group-md">
+                                                          <label for="inlineRadio09" class="radio-inline radiocontainer">Yes<input type="radio" name="disclaimradio" id="inlineRadio09" value="yes" tabindex="0"><span class="checkmark"></span></label>
+                                                          <label for="inlineRadio010" class="radio-inline radiocontainer">No<input type="radio" name="disclaimradio" id="inlineRadio010" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
-                                                        <div id="yesdisclaimer" class="form-group form-group-md form-horizontal"><!--toggle 'yes' radio-->
-                                                            <div class="margincontent">
+                                                        <div id="yesdisclaimer" class="form-group"><!--toggle 'yes' radio-->
+                                                            <div class="form-group form-group-md">
                                                                 <div class="control-label">
                                                                     <p>No claim is made to the exclusive right to use</p>
                                                                 </div>
@@ -223,11 +224,11 @@
                                                             <p>If you own one or more prior registrations for the same mark (same wording, design, etc.) list it below.</p>
                                                         </div>
                                                     </div>
-                                                    <div class="margincontent">
+                                                    <div>
                                                         <p id="prioreg">Do you have a prior registration for the same mark?</p>                                                        
-                                                        <div role="radiogroup" aria-labelledby="prioreg">
-                                                          <label for="inlineRadio011" class="radio-inline radiocontainer">Yes<input type="radio" name="priorradio" id="inlineRadio011" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
-                                                          <label for="inlineRadio012" class="radio-inline radiocontainer">No<input type="radio" name="priorradio" id="inlineRadio012" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                                        <div role="radiogroup" aria-labelledby="prioreg" class="form-group form-group-md">
+                                                          <label for="inlineRadio011" class="radio-inline radiocontainer">Yes<input type="radio" name="priorradio" id="inlineRadio011" value="yes" tabindex="0"><span class="checkmark"></span></label>
+                                                          <label for="inlineRadio012" class="radio-inline radiocontainer">No<input type="radio" name="priorradio" id="inlineRadio012" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yesprior" role="region" aria-labelledby="prioreg" class="form-group form-group-md row">
                                                             <div class="form-group form-group-md col-xs-12 col-sm-8" id="copy">
@@ -261,11 +262,11 @@
                                                             <p>If any word(s), letter(s), or numeral(s) appearing in the mark have a significance in the relevant trade or industry or as applied to the goods and/or services in the application, applicant should specify the significance to avoid inquiry by the examining attorney, e.g., &#8220;X-10&#8221; could be used as a specific model number, and this significance should be noted. If it appears that the word(s), letter(s), or numeral(s) may have significance, particularly to someone unfamiliar with the specific usage of the word(s), letter(s), or numeral(s), but in reality the usage is only as a trademark, applicant should indicate that there is no significance in the relevant trade or industry or as applied to the goods and/or services listed in the application, no geographical significance, and no meaning in a foreign language.</p>
                                                         </div>
                                                     </div>
-                                                    <div class="margincontent">
+                                                    <div>
                                                         <p id="meansignificance">Does the wording in your mark have a particular meaning or significance in your industry?</p>                                            			
-                                                        <div role="radiogroup" aria-labelledby="meansignificance">
-                                                          <label for="inlineRadio013" class="radio-inline radiocontainer">Yes<input type="radio" name="meaningradio" id="inlineRadio013" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
-                                                          <label for="inlineRadio014" class="radio-inline radiocontainer">No<input type="radio" name="meaningradio" id="inlineRadio014" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                                        <div role="radiogroup" aria-labelledby="meansignificance" class="form-group form-group-md" >
+                                                          <label for="inlineRadio013" class="radio-inline radiocontainer">Yes<input type="radio" name="meaningradio" id="inlineRadio013" value="yes" tabindex="0"><span class="checkmark"></span></label>
+                                                          <label for="inlineRadio014" class="radio-inline radiocontainer">No<input type="radio" name="meaningradio" id="inlineRadio014" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yesmeaning" role="region" class="form-horizontal form-group form-group-md">
                                                             <div class="col-xs-12 col-md-7">
