--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -167,7 +167,19 @@
                             </div>
                         </section>
                     </div>
-                    <h1>Filing Basis</h1>
+                    <div class="row">
+                        <div class="col-xs-8">
+                            <h1>Filing Basis</h1>
+                        </div>
+                        <div class="col-xs-4">
+                            <label for="country">Page Layout</label>
+                            <select class="form-control" id="pagelayout">
+                              <option value="Select">Select</option>
+                              <option value="guided">Guided</option>
+                              <option value="grid">Grid</option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-xs-12" id="basisabde">
                                 <div class="lead">
