--- a/import_individual.html
+++ b/import_individual.html
@@ -148,9 +148,14 @@
                                   </div>
                                </div>
                                <div class="appendto"></div>
-                               <div class="col-xs-12">
-                                	<button type="button" class="btn-sm btn-success fill" id="clonephone">Add Additional Phone Number</button>
-                               </div>
+                               <div class="inlinebuttons btn-group btn-group-justified" role="group" id="plusphone" aria-label="Add or delete additional phone number">
+                                  <div class="btn-group">
+                                        <button type="button" class="btn-sm btn-success add ctr" id="clonephone">Add Additional Phone Number</button>
+                                  </div>
+                                  <div class="btn-group">
+                                        <button type="button" class="btn-sm btn-success add ctr" id="resetphone">&#8211;</button>
+                                  </div>
+                               </div><!--end buttons-->
                             </div>
                         </fieldset><!--END Owner Address Information Form-->
                     </div><!--END Content Div-->
