--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/lynnstyles.css">
     <link rel="import" href="import_individual.html" id="individual">
     <link rel="import" href="import_sole.html" id="sole">
+    <link rel="import" href="import_corp.html" id="corp">
    </head>
 
 <body>
