--- a/layout_M7.html
+++ b/layout_M7.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype</title>
+    <title>USPTO.gov :: webapp prototype :: Owner Information - Sole Proprietorship</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/lynnstyles.css">
@@ -262,8 +263,8 @@
                     <form method="post" aria-labelledby="addressinfo">
                     <fieldset>
                     	<div class="row">
-                          <div class="form-group form-group-md col-md-12 col-lg-7">
-                            <label for="territory">Country/US Territory</label>
+                          <div class="form-group form-group-md col-xs-12 col-lg-7">
+                            <label for="territory"><span class="weight600">&#42;</span>Country/US Territory</label>
                             <select class="form-control" id="territory">
                               <option value="United States">United States</option>
                               <option value="Afghanistan">Afghanistan</option>
@@ -276,15 +277,15 @@
                               <option value="Dominican Republic">Dominican Republic</option>
                             </select>
                           </div>
-                          <div class="form-group form-group-md col-md-12 col-lg-8">
+                          <div class="form-group form-group-md col-xs-12 col-lg-8">
                             <label for="addressline1"><span class="weight600">&#42;</span>Address Line 1</label>
                             <input type="text" class="form-control" id="addressline1" th:field="*{ownerAddress1}" required>
                           </div>
-                          <div class="form-group form-group-md col-md-12 col-lg-8">
+                          <div class="form-group form-group-md col-xs-12 col-lg-8">
                             <label for="addressline2">Address Line 2</label>
                             <input type="text" class="form-control" id="addressline2" th:field="*{ownerAddress2}">
                           </div>
-                          <div class="form-group form-group-md col-md-12 col-lg-8">
+                          <div class="form-group form-group-md col-xs-12 col-lg-8">
                             <label for="addressline3">Address Line 3</label>
                             <input type="text" class="form-control" id="addressline3" th:field="*{ownerAddress3}">
                           </div>
@@ -373,29 +374,6 @@
         <!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script type="application/javascript" src="js/lynnjqueryscript.js"></script>
-        <script>
-            $(document).ready(function() {
-                setTimeout(function() {
-                    // after 1000 ms we add the class animated to the login/register card
-                    $('.content').fadeIn(500);
-                }, 500);
-                ///////////////////////////////////////////////////////////////////////////////////////////
-                // password modal update actions
-                // passowrd update on click
-                ////////////////////////////////////////////////////////////////////////////////////////////
-                $('#webPolicy').click( function () {
-                    $('#web-policy-card').fadeIn();
-                });    
-                $(function() {
-                    $('*').click(function(e) {
-                        if(e.target.id != 'webPolicy')   {
-                            $('#web-policy-card').fadeOut();
-                        }
-                    });
-                });    
-                //////////////////////////////////////////////////////////////////////////
-            });
-        </script>    
     </div>
     <footer>
         <div class="container-fluid">
