Mark Details Change Request
New client requirements added to Mark Details

--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -199,14 +199,14 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                                         <div class="Accordion form-group form-group-md">
                                         	<p><span class="weight600">&#42;</span> Which of the following types best describes the mark you want to apply for?</p>
                                             <input class="form-check-input checkmark" type="checkbox" value="Certification" tabindex="0" aria-labelledby="certificationcheck" id="certcheck">
-                                            <label class="form-check-label form-check hasinfo" for="certcheck" id="certcheck2"><span class="radio notspecial" id="certificationcheck">Certification</span></label><a href="#" data-toggle="modal" data-target="#tradeservmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about certification marks"></span></a>
+                                            <label class="form-check-label form-check hasinfo" for="certcheck" id="certcheck2"><span class="radio notspecial" id="certificationcheck">Certification</span></label><button data-toggle="modal" data-target="#tradeservmodal" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about certification marks"></span></button>
                                             <!-- Modal -->
-                                            <div class="modal fade" id="tradeservmodal" tabindex="-1" role="dialog" aria-labelledby="tradeserv2">
+                                            <div class="modal fade" id="tradeservmodal" tabindex="-1" role="dialog" aria-labelledby="certmodallabel">
                                               <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                   <div class="modal-header">
                                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                    <h4 class="modal-title" id="myModalLabel">Certification Mark</h4>
+                                                    <h4 class="modal-title" id="certmodallabel">Certification Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
                                                     <p>A certification mark is a type of trademark that is used to show consumers that particular goods and/or services, or their providers, have met certain standards.  (See TMEP Section 1306)</p>
@@ -222,15 +222,15 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                                             <input class="form-check-input checkmark" type="checkbox" value="Collective" tabindex="0" id="collectcheck" aria-labelledby="collect">
                                             <label class="form-check-label form-check hasinfo" for="collectcheck" id="collectcheck2"><span class="radio notspecial" id="collect">Collective</span></label><a href="#" data-toggle="modal" data-target="#collectivemodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about collective marks"></span></a>
                                             <!-- Modal -->
-                                            <div class="modal fade" id="collectivemodal" tabindex="-1" role="dialog" aria-labelledby="tradeserv2">
+                                            <div class="modal fade" id="collectivemodal" tabindex="-1" role="dialog" aria-labelledby="collectmodallabel">
                                               <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                   <div class="modal-header">
                                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                    <h4 class="modal-title" id="myModalLabel">Collective Mark</h4>
+                                                    <h4 class="modal-title" id="collectmodallabel">Collective Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
-                                                    <p>Collective Mark:  A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members.  (See TMEP Section 1303)</p>
+                                                    <p>A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members.  (See TMEP Section 1303)</p>
 
 													<p>Link for TMEP Section 3013: <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html" target="_blank">https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html</a></p>
                                                   </div>
@@ -241,7 +241,26 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                                               </div>
                                             </div>
                                             <input class="form-check-input checkmark" type="checkbox" value="Collective Membership" tabindex="0" aria-labelledby="collectm" id="collectmember">
-                                            <label class="form-check-label form-check" for="collectmember" id="collectm2"><span class="radio notspecial" id="collectm">Collective Membership</span></label>
+                                            <label class="form-check-label form-check hasinfo" for="collectmember" id="collectm2"><span class="radio notspecial" id="collectm">Collective Membership</span></label><a href="#" data-toggle="modal" data-target="#collectivemembmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about collective membership marks"></span></a>
+                                            <!-- Modal -->
+                                            <div class="modal fade" id="collectivemembmodal" tabindex="-1" role="dialog" aria-labelledby="collectmemberlabel">
+                                              <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                  <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    <h4 class="modal-title" id="collectmemberlabel">Collective Membership Mark</h4>
+                                                  </div>
+                                                  <div class="modal-body">
+                                                    <p>A collective membership mark is a mark used by the members of a particular organization to signify that they are members of that organization (e.g., a social club or labor union). (See TMEP Section 1304)</p>
+
+													<p>Link for TMEP Section 3014: <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e417.html" target="_blank">https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e417.html</a></p>
+                                                  </div>
+                                                  <div class="modal-footer">
+                                                    <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </fieldset>
