Replace prev Mark Details commit

--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -199,7 +199,7 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                                         <div class="Accordion form-group form-group-md">
                                         	<p><span class="weight600">&#42;</span> Which of the following types best describes the mark you want to apply for?</p>
                                             <input class="form-check-input checkmark" type="checkbox" value="Certification" tabindex="0" aria-labelledby="certificationcheck" id="certcheck">
-                                            <label class="form-check-label form-check hasinfo" for="certcheck" id="certcheck2"><span class="radio notspecial" id="certificationcheck">Certification</span></label><button data-toggle="modal" data-target="#tradeservmodal" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about certification marks"></span></button>
+                                            <label class="form-check-label form-check hasinfo" for="certcheck" id="certcheck2"><span class="radio notspecial" id="certificationcheck">Certification</span></label><a href="#" data-toggle="modal" data-target="#tradeservmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about certification marks"></span></a>
                                             <!-- Modal -->
                                             <div class="modal fade" id="tradeservmodal" tabindex="-1" role="dialog" aria-labelledby="certmodallabel">
                                               <div class="modal-dialog" role="document">
